# 4545_Spatial_Data

./: .gitignore  GLOBAL_CALENDAR.md  PYTHON_VERSION.txt  README.md  SETUP.md  clauderequest.md  justfile  requirements.txt  reset_env.sh  test_env.ipynb  znotes.txt
Assignments/: README.md
Assignments/01-A01/: README.md
Assignments/02-A02/: README.md
Assignments/02-Missile_Geometry_101/: README.md  notebook.ipynb  reflection.md  requirements.txt  run_project.py  setup.ipynb
Assignments/02-Missile_Geometry_202/: pyproject.toml
Assignments/03-Data_Manager/: README.md
Assignments/04-Worldle/: README.md  worldle.ipynb
Assignments/Part_00/: 00-Workflow.md  README.md
Assignments/program00/: Makefile  README.md  main.cpp  program00
Assignments/program01/: README.md  main.cpp  program01
Assignments/program02/: Makefile  main.cpp  program02
Notes/: Exam_2_Study
Notes/Exam_1_Study/: code.cpp
Resources/: meta.yaml
Resources/wdo/: README.md  __init__.py  build_scaffold.py  pyproject.toml
Resources/wdo/games/: __init__.py  pursuit.py  worldle.py
Resources/wdo/geometry/: __init__.py  bbox.py  bearing.py  distance.py  interpolation.py  points.py  simplify.py
Resources/wdo/graphs/: __init__.py  connectivity.py  rail_graph.py  routing.py
Resources/wdo/io/: __init__.py  geojson_tools.py  json_tools.py  paths.py
Resources/wdo/maps/: __init__.py  interaction.py  leaflet_helpers.py  style_tools.py
Resources/wdo/spatial/: __init__.py  buffers.py  feature_queries.py  intersections.py  pip.py
Resources/wdo/utils/: __init__.py  formatting.py  validation.py
(+188 files in other folders)
